new notebook for chapter 3 of neural data science
1. add dataset from companion site
2. add demo notebooks from companion site

--- a/ch2_from0to1.ipynb
+++ b/ch2_from0to1.ipynb
@@ -5,7 +5,9 @@
    "metadata": {},
    "source": [
     "# Chapter 2 From 0 To 0.01\n",
-    "## deal with vector"
+    "## deal with vector\n",
+    "\n",
+    "* [original companion code and data](https://www.elsevier.com/books-and-journals/book-companion/9780128040430/chapter-files#Chapter%20Files)"
    ]
   },
   {
